--- a/MauiApp3/DetailPage.xaml
+++ b/MauiApp3/DetailPage.xaml
@@ -2,12 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp3.DetailPage"
+             xmlns:viewmodel="clr-namespace:MauiApp3.ViewModel"
+             x:DataType="viewmodel:DetailViewModel"
              Title="DetailPage">
     <VerticalStackLayout Padding="20">
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="{Binding Text}"
             FontSize="25"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <Button Text="Go Back"
+                Command="{Binding GoBackCommand}"/>
     </VerticalStackLayout>
 </ContentPage>
